update to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,7 @@ passenger.*.pid.lock
 #seed data that can't go into the repo
 /db/seed/secure_seed/*
 
-
+shared/config/**
 
 #not checking in database.yaml since different deployments need to configure it differently (c9.io users)
 config/database.yml
