--- a/test/fixtures/issue_updates.yml
+++ b/test/fixtures/issue_updates.yml
@@ -26,12 +26,12 @@
 #
 #  column: value
 
-<% 2.times do |i| %>
-<%= "issue_update#{i}:" %>
-  UpdateName: Update1
-  Description: Update1 Description
-  issue: issue1
-  # tep_advisors_AdvisorBnum: B00123456
-  tep_advisor: snow_advisor
-  addressed: false 
-<% end %>
+# <% 2.times do |i| %>
+# <%= "issue_update#{i}:" %>
+#   UpdateName: Update1
+#   Description: Update1 Description
+#   issue: issue1
+#   # tep_advisors_AdvisorBnum: B00123456
+#   tep_advisor: snow_advisor
+#   addressed: false
+# <% end %>
