--- a/test/fixtures/issues.yml
+++ b/test/fixtures/issues.yml
@@ -25,14 +25,14 @@
 #
 #  column: value
 
-<% 4.times do |i| %>
-<%= "issue#{i}:" %>
-  student: candidate
-  Name: issue name
-  Description: description goes here
-  tep_advisors_AdvisorBnum: "B00123456"   #TODO change me!
-
-<% end %>
+# <% 4.times do |i| %>
+# <%= "issue#{i}:" %>
+#   student: candidate
+#   Name: issue name
+#   Description: description goes here
+#   tep_advisors_AdvisorBnum: "B00123456"   #TODO change me!
+#
+# <% end %>
 
 # one:
 #   student: candidate
