ignore all .csv files in lib
they will typically be data files with potentially sensitive data and need to be ignored by default

--- a/.gitignore
+++ b/.gitignore
@@ -55,6 +55,7 @@ entrance_exit_FIXED.csv
 
 # only .rb and .rake in lib/tasks/reports
 lib/tasks/reports/**
+lib/**/*.csv
 !lib/tasks/reports/**/*.rb
 !lib/tasks/reports/**/*.rake
 
