--- a/test/fixtures/praxis_tests.yml
+++ b/test/fixtures/praxis_tests.yml
@@ -45,7 +45,7 @@
   Sub6: Null
   Sub7: Null
   Program_ProgCode: Null
-  CurrentTest: 0
+  CurrentTest: false
 <%= "test#{enum.next}:" %>
   id: "5712"
   TestCode: "5712"
@@ -60,7 +60,7 @@
   Sub6: Null
   Sub7: Null
   Program_ProgCode: Null
-  CurrentTest: 1
+  CurrentTest: true
 <%= "test#{enum.next}:" %>
   id: "5720"
   TestCode: "5720"
@@ -75,7 +75,7 @@
   Sub6: Null
   Sub7: Null
   Program_ProgCode: Null
-  CurrentTest: 0
+  CurrentTest: false
 <%= "test#{enum.next}:" %>
   id: "5722"
   TestCode: "5722"
@@ -90,7 +90,7 @@
   Sub6: Null
   Sub7: Null
   Program_ProgCode: Null
-  CurrentTest: 1
+  CurrentTest: true
 <%= "test#{enum.next}:" %>
   id: "5730"
   TestCode: "5730"
@@ -105,7 +105,7 @@
   Sub6: Null
   Sub7: Null
   Program_ProgCode: Null
-  CurrentTest: 0
+  CurrentTest: false
 <%= "test#{enum.next}:" %>
   id: "5732"
   TestCode: "5732"
@@ -120,7 +120,7 @@
   Sub6: Null
   Sub7: Null
   Program_ProgCode: Null
-  CurrentTest: 1
+  CurrentTest: true
 <%= "test#{enum.next}:" %>
   id: "0014"
   TestCode: "0014"
@@ -135,7 +135,7 @@
   Sub6: Null
   Sub7: Null
   Program_ProgCode: Null
-  CurrentTest: 1
+  CurrentTest: true
 <%= "test#{enum.next}:" %>
   id: "0023"
   TestCode: "0023"
@@ -150,7 +150,7 @@
   Sub6: Professionalism and Growth Through Professional Development
   Sub7: Null
   Program_ProgCode: Null
-  CurrentTest: 1
+  CurrentTest: true
 <%= "test#{enum.next}:" %>
   id: "0032"
   TestCode: "0032"
@@ -165,7 +165,7 @@
   Sub6: Null
   Sub7: Null
   Program_ProgCode: Null
-  CurrentTest: 0
+  CurrentTest: false
 <%= "test#{enum.next}:" %>
   id: "0033"
   TestCode: "0033"
@@ -180,7 +180,7 @@
   Sub6: Null
   Sub7: Null
   Program_ProgCode: Null
-  CurrentTest: 0
+  CurrentTest: false
 <%= "test#{enum.next}:" %>
   id: "0034"
   TestCode: "0034"
@@ -195,7 +195,7 @@
   Sub6: Null
   Sub7: Null
   Program_ProgCode: Null
-  CurrentTest: 0
+  CurrentTest: false
 <%= "test#{enum.next}:" %>
   id: "0035"
   TestCode: "0035"
@@ -210,7 +210,7 @@
   Sub6: Null
   Sub7: Null
   Program_ProgCode: Null
-  CurrentTest: 0
+  CurrentTest: false
 <%= "test#{enum.next}:" %>
   id: "0041"
   TestCode: "0041"
@@ -225,7 +225,7 @@
   Sub6: Null
   Sub7: Null
   Program_ProgCode: Null
-  CurrentTest: 1
+  CurrentTest: true
 <%= "test#{enum.next}:" %>
   id: "0042"
   TestCode: "0042"
@@ -240,7 +240,7 @@
   Sub6: Null
   Sub7: Null
   Program_ProgCode: Null
-  CurrentTest: 1
+  CurrentTest: true
 <%= "test#{enum.next}:" %>
   id: "0044"
   TestCode: "0044"
@@ -255,7 +255,7 @@
   Sub6: Null
   Sub7: Null
   Program_ProgCode: Null
-  CurrentTest: 1
+  CurrentTest: true
 <%= "test#{enum.next}:" %>
   id: "0050"
   TestCode: "0050"
@@ -270,7 +270,7 @@
   Sub6: Pedagogical And Proessional Studies
   Sub7: Null
   Program_ProgCode: Null
-  CurrentTest: 1
+  CurrentTest: true
 <%= "test#{enum.next}:" %>
   id: "0051"
   TestCode: "0051"
@@ -285,7 +285,7 @@
   Sub6: Ped. and Professional Studies
   Sub7: Null
   Program_ProgCode: Null
-  CurrentTest: 1
+  CurrentTest: true
 <%= "test#{enum.next}:" %>
   id: "0061"
   TestCode: "0061"
@@ -300,7 +300,7 @@
   Sub6: Null
   Sub7: Null
   Program_ProgCode: Null
-  CurrentTest: 1
+  CurrentTest: true
 <%= "test#{enum.next}:" %>
   id: "0063"
   TestCode: "0063"
@@ -315,7 +315,7 @@
   Sub6: Null
   Sub7: Null
   Program_ProgCode: Null
-  CurrentTest: 1
+  CurrentTest: true
 <%= "test#{enum.next}:" %>
   id: "0069"
   TestCode: "0069"
@@ -330,7 +330,7 @@
   Sub6: Null
   Sub7: Null
   Program_ProgCode: Null
-  CurrentTest: 1
+  CurrentTest: true
 <%= "test#{enum.next}:" %>
   id: "0081"
   TestCode: "0081"
@@ -345,7 +345,7 @@
   Sub6: Behavioral Sciences
   Sub7: Null
   Program_ProgCode: Null
-  CurrentTest: 1
+  CurrentTest: true
 <%= "test#{enum.next}:" %>
   id: "0083"
   TestCode: "0083"
@@ -360,7 +360,7 @@
   Sub6: Null
   Sub7: Null
   Program_ProgCode: Null
-  CurrentTest: 1
+  CurrentTest: true
 <%= "test#{enum.next}:" %>
   id: "0086"
   TestCode: "0086"
@@ -375,7 +375,7 @@
   Sub6: Behavioral Sciences
   Sub7: Short Content Essays
   Program_ProgCode: Null
-  CurrentTest: 0
+  CurrentTest: false
 <%= "test#{enum.next}:" %>
   id: "0092"
   TestCode: "0092"
@@ -390,7 +390,7 @@
   Sub6: Null
   Sub7: Null
   Program_ProgCode: Null
-  CurrentTest: 1
+  CurrentTest: true
 <%= "test#{enum.next}:" %>
   id: "0095"
   TestCode: "0095"
@@ -405,7 +405,7 @@
   Sub6: Null
   Sub7: Null
   Program_ProgCode: Null
-  CurrentTest: 0
+  CurrentTest: false
 <%= "test#{enum.next}:" %>
   id: "0111"
   TestCode: "0111"
@@ -420,7 +420,7 @@
   Sub6: Null
   Sub7: Null
   Program_ProgCode: Null
-  CurrentTest: 1
+  CurrentTest: true
 <%= "test#{enum.next}:" %>
   id: "0113"
   TestCode: "0113"
@@ -435,7 +435,7 @@
   Sub6: Null
   Sub7: Null
   Program_ProgCode: Null
-  CurrentTest: 1
+  CurrentTest: true
 <%= "test#{enum.next}:" %>
   id: "0114"
   TestCode: "0114"
@@ -450,7 +450,7 @@
   Sub6: Null
   Sub7: Null
   Program_ProgCode: Null
-  CurrentTest: 0
+  CurrentTest: false
 <%= "test#{enum.next}:" %>
   id: "0135"
   TestCode: "0135"
@@ -465,7 +465,7 @@
   Sub6: Null
   Sub7: Null
   Program_ProgCode: Null
-  CurrentTest: 1
+  CurrentTest: true
 <%= "test#{enum.next}:" %>
   id: "0235"
   TestCode: "0235"
@@ -480,7 +480,7 @@
   Sub6: Science, Tech., and Society
   Sub7: Null
   Program_ProgCode: Null
-  CurrentTest: 0
+  CurrentTest: false
 <%= "test#{enum.next}:" %>
   id: "0265"
   TestCode: "0265"
@@ -495,7 +495,7 @@
   Sub6: His.and Nature of Sci., Sci. Tech., and Soc. Pers. STS)
   Sub7: Null
   Program_ProgCode: Null
-  CurrentTest: 0
+  CurrentTest: false
 <%= "test#{enum.next}:" %>
   id: "0439"
   TestCode: "0439"
@@ -510,7 +510,7 @@
   Sub6: Science, Tech., and Society
   Sub7: Short-Answer Essays
   Program_ProgCode: Null
-  CurrentTest: 0
+  CurrentTest: false
 <%= "test#{enum.next}:" %>
   id: "0522"
   TestCode: "0522"
@@ -525,7 +525,7 @@
   Sub6: "Communication Techniques: Case Histories/Short Answer Questions"
   Sub7: "Teacher Professionalism: Case Histories/Short Answer Questions"
   Program_ProgCode: Null
-  CurrentTest: 1
+  CurrentTest: true
 <%= "test#{enum.next}:" %>
   id: "0523"
   TestCode: "0523"
@@ -540,7 +540,7 @@
   Sub6: "Communication Techniques: Case Histories/Short Answer Questions"
   Sub7: "Teacher Professionalism: Case Histories/Short Answer Questions"
   Program_ProgCode: Null
-  CurrentTest: 1
+  CurrentTest: true
 <%= "test#{enum.next}:" %>
   id: "0524"
   TestCode: "0524"
@@ -555,7 +555,7 @@
   Sub6: "Communication Techniques: Case Histories/Short Answer Questions"
   Sub7: "Teacher Professionalism: Case Histories/Short Answer Questions"
   Program_ProgCode: Null
-  CurrentTest: 1
+  CurrentTest: true
 <%= "test#{enum.next}:" %>
   id: "0622"
   TestCode: "0622"
@@ -570,7 +570,7 @@
   Sub6: Null
   Sub7: Null
   Program_ProgCode: Null
-  CurrentTest: 0
+  CurrentTest: false
 <%= "test#{enum.next}:" %>
   id: "0623"
   TestCode: "0623"
@@ -585,7 +585,7 @@
   Sub6: Null
   Sub7: Null
   Program_ProgCode: Null
-  CurrentTest: 0
+  CurrentTest: false
 <%= "test#{enum.next}:" %>
   id: "0624"
   TestCode: "0624"
@@ -600,7 +600,7 @@
   Sub6: Null
   Sub7: Null
   Program_ProgCode: Null
-  CurrentTest: 0
+  CurrentTest: false
 <%= "test#{enum.next}:" %>
   id: "0856"
   TestCode: "0856"
@@ -615,7 +615,7 @@
   Sub6: Fitness and Exercise Science
   Sub7: Null
   Program_ProgCode: Null
-  CurrentTest: 0
+  CurrentTest: false
 <%= "test#{enum.next}:" %>
   id: "5032"
   TestCode: "5032"
@@ -630,7 +630,7 @@
   Sub6: Null
   Sub7: Null
   Program_ProgCode: Null
-  CurrentTest: 0
+  CurrentTest: false
 <%= "test#{enum.next}:" %>
   id: "5033"
   TestCode: "5033"
@@ -645,7 +645,7 @@
   Sub6: Null
   Sub7: Null
   Program_ProgCode: Null
-  CurrentTest: 0
+  CurrentTest: false
 <%= "test#{enum.next}:" %>
   id: "5034"
   TestCode: "5034"
@@ -660,7 +660,7 @@
   Sub6: Null
   Sub7: Null
   Program_ProgCode: Null
-  CurrentTest: 0
+  CurrentTest: false
 <%= "test#{enum.next}:" %>
   id: "5035"
   TestCode: "5035"
@@ -675,7 +675,7 @@
   Sub6: Null
   Sub7: Null
   Program_ProgCode: Null
-  CurrentTest: 0
+  CurrentTest: false
 <%= "test#{enum.next}:" %>
   id: "5039"
   TestCode: "5039"
@@ -690,7 +690,7 @@
   Sub6: Null
   Sub7: Null
   Program_ProgCode: Null
-  CurrentTest: 0
+  CurrentTest: false
 <%= "test#{enum.next}:" %>
   id: "5044"
   TestCode: "5044"
@@ -705,7 +705,7 @@
   Sub6: Null
   Sub7: Null
   Program_ProgCode: Null
-  CurrentTest: 1
+  CurrentTest: true
 <%= "test#{enum.next}:" %>
   id: "5051"
   TestCode: "5051"
@@ -720,7 +720,7 @@
   Sub6: Ped. and Professional Studies
   Sub7: Null
   Program_ProgCode: Null
-  CurrentTest: 0
+  CurrentTest: false
 <%= "test#{enum.next}:" %>
   id: "5061"
   TestCode: "5061"
@@ -735,7 +735,7 @@
   Sub6: Null
   Sub7: Null
   Program_ProgCode: Null
-  CurrentTest: 1
+  CurrentTest: true
 <%= "test#{enum.next}:" %>
   id: "5063"
   TestCode: "5063"
@@ -750,7 +750,7 @@
   Sub6: Null
   Sub7: Null
   Program_ProgCode: Null
-  CurrentTest: 1
+  CurrentTest: true
 <%= "test#{enum.next}:" %>
   id: "5069"
   TestCode: "5069"
@@ -765,7 +765,7 @@
   Sub6: Null
   Sub7: Null
   Program_ProgCode: Null
-  CurrentTest: 1
+  CurrentTest: true
 <%= "test#{enum.next}:" %>
   id: "5086"
   TestCode: "5086"
@@ -780,7 +780,7 @@
   Sub6: Behavioral Sciences
   Sub7: Short Content Essays
   Program_ProgCode: Null
-  CurrentTest: 0
+  CurrentTest: false
 <%= "test#{enum.next}:" %>
   id: "5095"
   TestCode: "5095"
@@ -795,7 +795,7 @@
   Sub6: Null
   Sub7: Null
   Program_ProgCode: Null
-  CurrentTest: 0
+  CurrentTest: false
 <%= "test#{enum.next}:" %>
   id: "5114"
   TestCode: "5114"
@@ -810,7 +810,7 @@
   Sub6: Null
   Sub7: Null
   Program_ProgCode: Null
-  CurrentTest: 0
+  CurrentTest: false
 <%= "test#{enum.next}:" %>
   id: "5135"
   TestCode: "5135"
@@ -825,7 +825,7 @@
   Sub6: Null
   Sub7: Null
   Program_ProgCode: Null
-  CurrentTest: 0
+  CurrentTest: false
 <%= "test#{enum.next}:" %>
   id: "5161"
   TestCode: "5161"
@@ -840,7 +840,7 @@
   Sub6: Null
   Sub7: Null
   Program_ProgCode: Null
-  CurrentTest: 0
+  CurrentTest: false
 <%= "test#{enum.next}:" %>
   id: "5235"
   TestCode: "5235"
@@ -855,7 +855,7 @@
   Sub6: Science, Tech., and Society
   Sub7: Null
   Program_ProgCode: Null
-  CurrentTest: 0
+  CurrentTest: false
 <%= "test#{enum.next}:" %>
   id: "5265"
   TestCode: "5265"
@@ -870,7 +870,7 @@
   Sub6: His.and Nature of Sci., Sci. Tech., and Soc. Pers. STS)
   Sub7: Null
   Program_ProgCode: Null
-  CurrentTest: 0
+  CurrentTest: false
 <%= "test#{enum.next}:" %>
   id: "5439"
   TestCode: "5439"
@@ -885,7 +885,7 @@
   Sub6: Science, Tech., and Society
   Sub7: Short-Answer Essays
   Program_ProgCode: Null
-  CurrentTest: 0
+  CurrentTest: false
 <%= "test#{enum.next}:" %>
   id: "5622"
   TestCode: "5622"
@@ -900,7 +900,7 @@
   Sub6: Null
   Sub7: Null
   Program_ProgCode: Null
-  CurrentTest: 0
+  CurrentTest: false
 <%= "test#{enum.next}:" %>
   id: "5623"
   TestCode: "5623"
@@ -915,7 +915,7 @@
   Sub6: Null
   Sub7: Null
   Program_ProgCode: Null
-  CurrentTest: 0
+  CurrentTest: false
 <%= "test#{enum.next}:" %>
   id: "5624"
   TestCode: "5624"
@@ -930,7 +930,7 @@
   Sub6: Null
   Sub7: Null
   Program_ProgCode: Null
-  CurrentTest: 0
+  CurrentTest: false
 <%= "test#{enum.next}:" %>
   id: "5856"
   TestCode: "5856"
@@ -945,7 +945,7 @@
   Sub6: Fitness and Exercise Science
   Sub7: Null
   Program_ProgCode: Null
-  CurrentTest: 0
+  CurrentTest: false
 <%= "test#{enum.next}:" %>
   id: "5169"
   TestCode: "5169"
@@ -960,7 +960,7 @@
   Sub6: Null
   Sub7: Null
   Program_ProgCode: Null
-  CurrentTest: 0
+  CurrentTest: false
 <%= "test#{enum.next}:" %>
   id: "5113"
   TestCode: "5113"
@@ -975,7 +975,7 @@
   Sub6: Null
   Sub7: Null
   Program_ProgCode: Null
-  CurrentTest: 0
+  CurrentTest: false
 <%= "test#{enum.next}:" %>
   id: 5002
   TestCode: "5002"
@@ -990,7 +990,7 @@
   Sub6: Null
   Sub7: Null
   Program_ProgCode: Null
-  CurrentTest: 1
+  CurrentTest: true
 <%= "test#{enum.next}:" %>
   id: 5003
   TestCode: "5003"
@@ -1005,7 +1005,7 @@
   Sub6: Null
   Sub7: Null
   Program_ProgCode: Null
-  CurrentTest: 1
+  CurrentTest: true
 <%= "test#{enum.next}:" %>
   id: 5004
   TestCode: "5004"
@@ -1020,7 +1020,7 @@
   Sub6: Null
   Sub7: Null
   Program_ProgCode: Null
-  CurrentTest: 1
+  CurrentTest: true
 <%= "test#{enum.next}:" %>
   id: 5005
   TestCode: "5005"
@@ -1035,7 +1035,7 @@
   Sub6: Null
   Sub7: Null
   Program_ProgCode: Null
-  CurrentTest: 1
+  CurrentTest: true
 <%= "test#{enum.next}:" %>
   id: 5440
   TestCode: "5440"
@@ -1050,4 +1050,4 @@
   Sub6: Science, Technology, and Society
   Sub7: Null
   Program_ProgCode: Null
-  CurrentTest: 1
+  CurrentTest: true
