--- a/.gitignore
+++ b/.gitignore
@@ -49,6 +49,7 @@ bower.json
 .powenv
 error_rpt.txt
 error_report.txt
+all_errors.txt
 entrance_exit_FIXED.csv
 
 # only .rb and .rake in lib/tasks/reports
