add strategies to pgp forms

--- a/test/fixtures/banner_terms.yml
+++ b/test/fixtures/banner_terms.yml
@@ -1,3 +1,15 @@
+# == Schema Information
+#
+# Table name: banner_terms
+#
+#  BannerTerm    :integer          not null, primary key
+#  PlainTerm     :string(45)       not null
+#  StartDate     :datetime         not null
+#  EndDate       :datetime         not null
+#  AYStart       :integer          not null
+#  standard_term :boolean
+#
+
 begin_time:
   BannerTerm: 1
   PlainTerm: Begin Time
