student_scores directory structure

--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,16 @@ config/chef/nodes/*
 !config/chef/nodes/example.json
 
 .byebug_history
+
+
+# for student scores folder - keep directory structure but no files
+/student_scores/**/*
+
+!/student_scores/raw
+!/student_scores/formatted
+
+/student_scores/raw/**/*
+/student_scores/formatted/**/*
+
+!/student_scores/raw/.gitkeep
+!/student_scores/formatted/.gitkeep
