--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 public/student_files/*
 public/assets/*
+public/packs
 /tmp/cache/*
 /log/*
 *.rbc
@@ -77,3 +78,4 @@ config/chef/nodes/*
 !/student_scores/raw/.gitkeep
 !/student_scores/formatted/.gitkeep
 !/student_scores/README.md
+/node_modules
